cbits/Bullet.h

void btCollisionWorld_ClosestConvexResultCallback_m_hitNormalWorld_get(void *c,float* a);
void btCollisionWorld_ClosestConvexResultCallback_m_hitPointWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestConvexResultCallback->m_hitPointWorld
void btCollisionWorld_ClosestConvexResultCallback_m_hitPointWorld_get(void *c,float* a);
void* btCollisionWorld_ClosestRayResultCallback_new(float* p0,float* p1); //constructor: ClosestRayResultCallback  ( ::btCollisionWorld::ClosestRayResultCallback::* )( ::btVector3 const &,::btVector3 const & ) 
void btCollisionWorld_ClosestRayResultCallback_free(void *c);
 
float btCollisionWorld_ClosestRayResultCallback_addSingleResult(void *c,void* p0,int p1); //method: addSingleResult ::btScalar ( ::btCollisionWorld::ClosestRayResultCallback::* )( ::btCollisionWorld::LocalRayResult &,bool ) 
void btCollisionWorld_ClosestRayResultCallback_m_hitNormalWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestRayResultCallback->m_hitNormalWorld
void btCollisionWorld_ClosestRayResultCallback_m_hitNormalWorld_get(void *c,float* a);
void btCollisionWorld_ClosestRayResultCallback_m_hitPointWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestRayResultCallback->m_hitPointWorld
void btCollisionWorld_ClosestRayResultCallback_m_hitPointWorld_get(void *c,float* a);
void btCollisionWorld_ClosestRayResultCallback_m_rayFromWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestRayResultCallback->m_rayFromWorld
void btCollisionWorld_ClosestRayResultCallback_m_rayFromWorld_get(void *c,float* a);
void btCollisionWorld_ClosestRayResultCallback_m_rayToWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestRayResultCallback->m_rayToWorld
void btCollisionWorld_ClosestRayResultCallback_m_rayToWorld_get(void *c,float* a);
float btCollisionWorld_ContactResultCallback_addSingleResult(void *c,void* p0,void* p1,int p2,int p3,void* p4,int p5,int p6); //method: addSingleResult ::btScalar ( ::btCollisionWorld::ContactResultCallback::* )( ::btManifoldPoint &,::btCollisionObject const *,int,int,::btCollisionObject const *,int,int ) 
int btCollisionWorld_ContactResultCallback_needsCollision(void *c,void* p0); //method: needsCollision bool ( ::btCollisionWorld::ContactResultCallback::* )( ::btBroadphaseProxy * ) const
void btCollisionWorld_ContactResultCallback_m_collisionFilterGroup_set(void *c,short int a); //attribute: short int btCollisionWorld_ContactResultCallback->m_collisionFilterGroup
short int btCollisionWorld_ContactResultCallback_m_collisionFilterGroup_get(void *c); //attribute: short int btCollisionWorld_ContactResultCallback->m_collisionFilterGroup
void btCollisionWorld_ContactResultCallback_m_collisionFilterMask_set(void *c,short int a); //attribute: short int btCollisionWorld_ContactResultCallback->m_collisionFilterMask
short int btCollisionWorld_ContactResultCallback_m_collisionFilterMask_get(void *c); //attribute: short int btCollisionWorld_ContactResultCallback->m_collisionFilterMask
float btCollisionWorld_ConvexResultCallback_addSingleResult(void *c,void* p0,int p1); //method: addSingleResult ::btScalar ( ::btCollisionWorld::ConvexResultCallback::* )( ::btCollisionWorld::LocalConvexResult &,bool ) 
int btCollisionWorld_ConvexResultCallback_needsCollision(void *c,void* p0); //method: needsCollision bool ( ::btCollisionWorld::ConvexResultCallback::* )( ::btBroadphaseProxy * ) const
int btCollisionWorld_ConvexResultCallback_hasHit(void *c); //method: hasHit bool ( ::btCollisionWorld::ConvexResultCallback::* )(  ) const
void btCollisionWorld_ConvexResultCallback_m_closestHitFraction_set(void *c,float a); //attribute: ::btScalar btCollisionWorld_ConvexResultCallback->m_closestHitFraction
float btCollisionWorld_ConvexResultCallback_m_closestHitFraction_get(void *c); //attribute: ::btScalar btCollisionWorld_ConvexResultCallback->m_closestHitFraction