Physics/Bullet/Raw/BulletCollision/CollisionDispatch.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#377>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_hitNormalWorld_get    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#378>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_hitPointWorld_set    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#378>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_hitPointWorld_get    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
-- * ClosestRayResultCallback
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#235>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_new as btCollisionWorld_ClosestRayResultCallback    {  withVec3* `Vec3' , withVec3* `Vec3'  } -> `BtCollisionWorld_ClosestRayResultCallback' mkBtCollisionWorld_ClosestRayResultCallback* #}
{#fun btCollisionWorld_ClosestRayResultCallback_free    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#247>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_addSingleResult as btCollisionWorld_ClosestRayResultCallback_addSingleResult    `( BtCollisionWorld_ClosestRayResultCallbackClass bc , BtCollisionWorld_LocalRayResultClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ rayResult
,  `Bool'  -- ^ normalInWorldSpace
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#244>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_hitNormalWorld_set    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#244>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_hitNormalWorld_get    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#245>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_hitPointWorld_set    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#245>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_hitPointWorld_get    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#241>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_rayFromWorld_set    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#241>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_rayFromWorld_get    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#242>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_rayToWorld_set    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#242>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestRayResultCallback_m_rayToWorld_get    `( BtCollisionWorld_ClosestRayResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
-- * ContactResultCallback
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#424>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ContactResultCallback_addSingleResult as btCollisionWorld_ContactResultCallback_addSingleResult    `( BtCollisionWorld_ContactResultCallbackClass bc , BtManifoldPointClass p0 , BtCollisionObjectClass p1 , BtCollisionObjectClass p4 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ cp
, withBt* `p1'  -- ^ colObj0
,  `Int'  -- ^ partId0
,  `Int'  -- ^ index0
, withBt* `p4'  -- ^ colObj1
,  `Int'  -- ^ partId1
,  `Int'  -- ^ index1
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#417>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ContactResultCallback_needsCollision as btCollisionWorld_ContactResultCallback_needsCollision    `( BtCollisionWorld_ContactResultCallbackClass bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy0
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#404>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ContactResultCallback_m_collisionFilterGroup_set    `( BtCollisionWorld_ContactResultCallbackClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#404>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ContactResultCallback_m_collisionFilterGroup_get    `( BtCollisionWorld_ContactResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#405>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ContactResultCallback_m_collisionFilterMask_set    `( BtCollisionWorld_ContactResultCallbackClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#405>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ContactResultCallback_m_collisionFilterMask_get    `( BtCollisionWorld_ContactResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * ConvexResultCallback
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#362>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_addSingleResult as btCollisionWorld_ConvexResultCallback_addSingleResult    `( BtCollisionWorld_ConvexResultCallbackClass bc , BtCollisionWorld_LocalConvexResultClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ convexResult
,  `Bool'  -- ^ normalInWorldSpace
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#355>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_needsCollision as btCollisionWorld_ConvexResultCallback_needsCollision    `( BtCollisionWorld_ConvexResultCallbackClass bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy0
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#348>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_hasHit as btCollisionWorld_ConvexResultCallback_hasHit    `( BtCollisionWorld_ConvexResultCallbackClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#333>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_m_closestHitFraction_set    `( BtCollisionWorld_ConvexResultCallbackClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#333>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_m_closestHitFraction_get    `( BtCollisionWorld_ConvexResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#334>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
